force-app/main/default/objects/Vencimiento__c/Vencimiento__c.object-meta.xml
<CustomObject>
    <label>Línea de Vencimiento</label>
    <nameField>
        <displayFormat>L.Venc# {0000000000}</displayFormat>
        <label>Vencimiento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Líneas de Vencimiento</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>