force-app/main/default/objects/Vencimiento__c/fields/C_digo_pa_s__c.field-meta.xml
<CustomField>
    <fullName>C_digo_pa_s__c</fullName>
    <formula>TEXT( Factura__r.Cliente__r.Pais__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código país</label>
    <type>Text</type>
</CustomField>