force-app/main/default/objects/Vencimiento__c/fields/Ejercicio__c.field-meta.xml
<CustomField>
    <fullName>Ejercicio__c</fullName>
    <label>Ejercicio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>