force-app/main/default/objects/Vencimiento__c/fields/Factura__c.field-meta.xml
<CustomField>
    <fullName>Factura__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Factura</label>
    <referenceTo>Factura__c</referenceTo>
    <relationshipName>Vencimiento</relationshipName>
    <type>Lookup</type>
</CustomField>