force-app/main/default/objects/Vencimiento__c/fields/Fecha_firma_mandato__c.field-meta.xml
<CustomField>
    <fullName>Fecha_firma_mandato__c</fullName>
    <inlineHelpText>Data signatura mandat</inlineHelpText>
    <label>Fecha firma mandato</label>
    <type>Date</type>
</CustomField>