force-app/main/default/objects/Vencimiento__c/fields/Fin_de_Facturaci_n__c.field-meta.xml
<CustomField>
    <fullName>Fin_de_Facturaci_n__c</fullName>
    <label>Fecha emisión</label>
    <type>Date</type>
</CustomField>