force-app/main/default/objects/Vencimiento__c/fields/Id_Vencimiento__c.field-meta.xml
<CustomField>
    <fullName>Id_Vencimiento__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id Vencimiento</label>
    <type>Text</type>
</CustomField>