force-app/main/default/objects/Vencimiento__c/fields/Importe_de_factura__c.field-meta.xml
<CustomField>
    <fullName>Importe_de_factura__c</fullName>
    <label>Importe de factura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>