force-app/main/default/objects/Vencimiento__c/fields/Importe_Total__c.field-meta.xml
<CustomField>
    <fullName>Importe_Total__c</fullName>
    <label>Importe Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>