force-app/main/default/objects/Vencimiento__c/fields/Inicio_de_Facturaci_n__c.field-meta.xml
<CustomField>
    <fullName>Inicio_de_Facturaci_n__c</fullName>
    <label>Fecha Vencimiento</label>
    <type>Date</type>
</CustomField>