force-app/main/default/objects/Vencimiento__c/fields/Motivo_devoluci_n__c.field-meta.xml
<CustomField>
    <fullName>Motivo_devoluci_n__c</fullName>
    <label>Motivo devolución</label>
    <length>255</length>
    <type>Text</type>
</CustomField>