force-app/main/default/objects/Vencimiento__c/fields/N_mero_de_Factura__c.field-meta.xml
<CustomField>
    <fullName>N_mero_de_Factura__c</fullName>
    <label>Número de Factura</label>
    <length>80</length>
    <type>Text</type>
</CustomField>