force-app/main/default/objects/Vencimiento__c/fields/N_mero_de_pago__c.field-meta.xml
<CustomField>
    <fullName>N_mero_de_pago__c</fullName>
    <label>Número de pago</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>