force-app/main/default/objects/Vencimiento__c/fields/Nombre_de_la_factura__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_la_factura__c</fullName>
    <label>Nombre de la factura</label>
    <length>80</length>
    <type>Text</type>
</CustomField>