force-app/main/default/objects/Vencimiento__c/fields/Ref_fichero__c.field-meta.xml
<CustomField>
    <fullName>Ref_fichero__c</fullName>
    <formula>TEXT(YEAR(TODAY()))+TEXT(MONTH(TODAY()))+TEXT(DAY(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ref fichero</label>
    <type>Text</type>
</CustomField>