force-app/main/default/objects/Vencimiento__c/fields/Referencia__c.field-meta.xml
<CustomField>
    <fullName>Referencia__c</fullName>
    <formula>N_mero_de_Factura__c + &quot;/&quot; +  TEXT(N_mero_de_pago__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referencia</label>
    <type>Text</type>
</CustomField>