force-app/main/default/objects/Vencimiento__c/fields/Referencia_fichero__c.field-meta.xml
<CustomField>
    <fullName>Referencia_fichero__c</fullName>
    <label>Referencia fichero</label>
    <length>255</length>
    <type>Text</type>
</CustomField>