force-app/main/default/objects/Vencimiento__c/fields/Referencia_mandato__c.field-meta.xml
<CustomField>
    <fullName>Referencia_mandato__c</fullName>
    <label>Referencia mandato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>