force-app/main/default/objects/Vencimiento__c/fields/Referencia_recibo__c.field-meta.xml
<CustomField>
    <fullName>Referencia_recibo__c</fullName>
    <label>Referencia recibo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>