force-app/main/default/objects/Vencimiento__c/fields/Remesa__c.field-meta.xml
<CustomField>
    <fullName>Remesa__c</fullName>
    <label>Remesa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>