force-app/main/default/objects/Vencimiento__c/fields/Residente__c.field-meta.xml
<CustomField>
    <fullName>Residente__c</fullName>
    <label>Residente</label>
    <length>20</length>
    <type>Text</type>
</CustomField>