force-app/main/default/objects/Vencimiento__c/fields/Tipo_adeudo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_adeudo__c</fullName>
    <inlineHelpText>FRST - FIRST
RCUR - RECURRENTE
FNAL - FINAL
OOFF - ÚNICO</inlineHelpText>
    <label>Tipo adeudo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FRST</fullName>
            </value>
            <value>
                <fullName>RCUR</fullName>
                <default>true</default>
                <label>RCUR</label>
            </value>
            <value>
                <fullName>FNAL</fullName>
            </value>
            <value>
                <fullName>OOFF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>