force-app/main/default/objects/Vencimiento__c/fields/Tipo_de_Pago__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Pago__c</fullName>
    <label>Tipo de Pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domiciliación bancaria</fullName>
                <label>Domiciliació bancària</label>
            </value>
            <value>
                <fullName>Efectivo</fullName>
                <label>Efectiu</label>
            </value>
            <value>
                <fullName>Tarjeta</fullName>
                <label>Targeta</label>
            </value>
            <value>
                <fullName>Transferencia</fullName>
                <label>Transferència</label>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>